finished with it

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,8 @@
         <input class="form-control form-control-sm input col-8" id="secret" type="password" placeholder="Secret (needed to make custom)" name="secret" required>
         <button class="btn btn-sm btn-success col-8" id="submit" type="submit">Shorten</button>
     </div>
-    <div id="shortcode" class="row justify-content-center">
+
+    <div id="shortCode" class="row justify-content-center">
         <!--here error or the shortcode(in case of success) will come-->
     </div>
     <script src="jquery.min.js"></script>
