--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <div class="form-group row justify-content-center">
         <input class="form-control form-control-sm input col-8" id="url" placeholder="URL" name="url" required>
         <input class="form-control form-control-sm input col-8" id="code" placeholder="Custom Shortcode (optional)" name="code">
-        <input class="form-control form-control-sm input col-8" id="secret" type="password" placeholder="Secret (needed to make custom)" name="secret" required>
+        <input class="form-control form-control-sm input col-8" id="secret" type="password" placeholder="Secret (needed)" name="secret" required>
         <button class="btn btn-sm btn-success col-8" id="submit" type="submit">Shorten</button>
     </div>
 
