added currentURL autoFILL

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="form-group row justify-content-center">
-        <input class="form-control form-control-sm input col-8" id="url" placeholder="URL" name="url" autofocus tabindex="1">
+        <input class="form-control form-control-sm input col-8" id="url" placeholder="URL" name="url" autofocus tabindex="1" value="">
         <input class="form-control form-control-sm input col-8" id="code" placeholder="Custom Shortcode (optional)" name="code">
         <input class="form-control form-control-sm input col-8" id="secret" type="password" placeholder="Secret (needed)" name="secret" tabindex="2">
         <button class="btn btn-sm btn-success col-8" id="submit" tabindex="3" type="submit">Shorten</button>
